5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4357/executions/1692_1100.log
== TEST (2019-04-30 18:39:46) 
-- CODE:
cedula=float(input("digite o numero:"))
if(cedula!=2) or (cedula!=5) or (cedula!=10) or (cedula!=20) or (cedula!=50) or (cedula!=100):
aminal="invalido"
elif(cedula=2)
mensagem="Tartaruga"
elif(cedula=5)
mensagem="Garça"
elif(cedula=10)
mensagem="Arara"
elif(cedula=20)
mensagem="Mico-leao-dourado"
elif(cedula=50)
mensagem="onca"
elif(cedula=100)
mensagem="Garoupa"
print("Entrada:", cedula)
print("Animal:", mensagem)


-- ERROR:
File "XXXX", line 3
    aminal="invalido"
         ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 18:40:39) 
-- CODE:
cedula=float(input("digite o numero:"))
if(cedula!=2) or (cedula!=5) or (cedula!=10) or (cedula!=20) or (cedula!=50) or (cedula!=100):
print("invalido")
elif(cedula=2)
mensagem="Tartaruga"
elif(cedula=5)
mensagem="Garça"
elif(cedula=10)
mensagem="Arara"
elif(cedula=20)
mensagem="Mico-leao-dourado"
elif(cedula=50)
mensagem="onca"
elif(cedula=100)
mensagem="Garoupa"
print("Entrada:", cedula)
print("Animal:", mensagem)


-- ERROR:
File "XXXX", line 3
    print("invalido")
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 18:40:53) 
-- CODE:
cedula=float(input("digite o numero:"))
if(cedula!=2) or (cedula!=5) or (cedula!=10) or (cedula!=20) or (cedula!=50) or (cedula!=100):
elif(cedula=2)
mensagem="Tartaruga"
elif(cedula=5)
mensagem="Garça"
elif(cedula=10)
mensagem="Arara"
elif(cedula=20)
mensagem="Mico-leao-dourado"
elif(cedula=50)
mensagem="onca"
elif(cedula=100)
mensagem="Garoupa"
print("Entrada:", cedula)
print("Animal:", mensagem)


-- ERROR:
File "XXXX", line 3
    elif(cedula=2)
       ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 18:41:23) 
-- CODE:
cedula=float(input("digite o numero:"))
if(cedula!=2) or (cedula!=5) or (cedula!=10) or (cedula!=20) or (cedula!=50) or (cedula!=100):
	print("invalido")
elif(cedula=2)
mensagem="Tartaruga"
elif(cedula=5)
mensagem="Garça"
elif(cedula=10)
mensagem="Arara"
elif(cedula=20)
mensagem="Mico-leao-dourado"
elif(cedula=50)
mensagem="onca"
elif(cedula=100)
mensagem="Garoupa"
print("Entrada:", cedula)
print("Animal:", mensagem)


-- ERROR:
File "XXXX", line 4
    elif(cedula=2)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 18:42:11) 
-- CODE:
cedula=float(input("digite o numero:"))
if(cedula!=2) or (cedula!=5) or (cedula!=10) or (cedula!=20) or (cedula!=50) or (cedula!=100):
	print("invalido")
	elif(cedula=2)
	mensagem="Tartaruga"
	elif(cedula=5)
	mensagem="Garça"
	elif(cedula=10)
	mensagem="Arara"
	elif(cedula=20)
	mensagem="Mico-leao-dourado"
	elif(cedula=50)
	mensagem="onca"
	elif(cedula=100)
	mensagem="Garoupa"
print("Entrada:", cedula)
print("Animal:", mensagem)


-- ERROR:
File "XXXX", line 4
    elif(cedula=2)
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 18:43:40) 
-- CODE:
cedula=float(input("digite o numero:"))
if(cedula!=2):
	print("invalido")
elif(cedula=2):
	mensagem="Tartaruga"
elif(cedula=5):
	mensagem="Garça"
elif(cedula=10):
	mensagem="Arara"
elif(cedula=20):
	mensagem="Mico-leao-dourado"
elif(cedula=50):
	mensagem="onca"
elif(cedula=100):
	mensagem="Garoupa"
print("Entrada:", cedula)
print("Animal:", mensagem)


-- ERROR:
File "XXXX", line 4
    elif(cedula=2):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 18:44:24) 
-- CODE:
cedula=float(input("digite o numero:"))
if(cedula!=2):
	print("invalido")
else(cedula==2):
	mensagem="Tartaruga"
elif(cedula=5):
	mensagem="Garça"
elif(cedula=10):
	mensagem="Arara"
elif(cedula=20):
	mensagem="Mico-leao-dourado"
elif(cedula=50):
	mensagem="onca"
elif(cedula=100):
	mensagem="Garoupa"
print("Entrada:", cedula)
print("Animal:", mensagem)


-- ERROR:
File "XXXX", line 4
    else(cedula==2):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 18:44:36) 
-- CODE:
cedula=float(input("digite o numero:"))
if(cedula!=2):
	print("invalido")
elif(cedula==2):
	mensagem="Tartaruga"
elif(cedula=5):
	mensagem="Garça"
elif(cedula=10):
	mensagem="Arara"
elif(cedula=20):
	mensagem="Mico-leao-dourado"
elif(cedula=50):
	mensagem="onca"
elif(cedula=100):
	mensagem="Garoupa"
print("Entrada:", cedula)
print("Animal:", mensagem)


-- ERROR:
File "XXXX", line 6
    elif(cedula=5):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 18:44:55) 
-- CODE:
cedula=float(input("digite o numero:"))
if(cedula!=2):
	print("invalido")
elif(cedula==2):
	mensagem="Tartaruga"
elif(cedula==5):
	mensagem="Garça"
elif(cedula==10):
	mensagem="Arara"
elif(cedula==20):
	mensagem="Mico-leao-dourado"
elif(cedula==50):
	mensagem="onca"
elif(cedula==100):
	mensagem="Garoupa"
print("Entrada:", cedula)
print("Animal:", mensagem)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 17, in <module>
    print("Animal:", mensagem)
NameError: name 'mensagem' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 18:46:04) 
-- CODE:
cedula=float(input("digite o numero:"))
if(cedula!=2):
	print("invalido")
elif(cedula==2):
	mensagem="Tartaruga"
elif(cedula==5):
	mensagem="Garça"
elif(cedula==10):
	mensagem="Arara"
elif(cedula==20):
	mensagem="Mico-leao-dourado"
elif(cedula==50):
	mensagem="onca"
elif(cedula==100):
	mensagem="Garoupa"
print("Entrada:", cedula)
print("Animal:", mensagem)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 17, in <module>
    print("Animal:", mensagem)
NameError: name 'mensagem' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 18:47:26) 
-- CODE:
cedula=float(input("digite o numero:"))
if(cedula!=2):
	print("invalido")
elif(cedula==2):
	m="Tartaruga"
elif(cedula==5):
	m="Garça"
elif(cedula==10):
	m="Arara"
elif(cedula==20):
	m="Mico-leao-dourado"
elif(cedula==50):
	m="onca"
elif(cedula==100):
	m="Garoupa"
print("Entrada:", cedula)
print("Animal:", m)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 17, in <module>
    print("Animal:", m)
NameError: name 'm' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 18:48:19) 
-- CODE:
cedula=float(input("digite o numero:"))
if(cedula!=2):
	print("invalido")
elif(cedula==2):
	m="Tartaruga"
elif(cedula==5):
	m="Garça"
elif(cedula==10):
	m="Arara"
elif(cedula==20):
	m="Mico-leao-dourado"
elif(cedula==50):
	m="onca"
elif(cedula==100):
	m="Garoupa"
print("Entrada:", cedula)
print("m")


-- OUTPUT:
invalido
Entrada: 100.0
m
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 18:48:59) 
-- CODE:
cedula=float(input("digite o numero:"))
if(cedula!=2):
	print("invalido")
elif(cedula==2):
	m="Tartaruga"
elif(cedula==5):
	m="Garça"
elif(cedula==10):
	m="Arara"
elif(cedula==20):
	m="Mico-leao-dourado"
elif(cedula==50):
	m="onca"
elif(cedula==100):
	m="Garoupa"
print("Entrada:", cedula)
print("Animal:", m)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 17, in <module>
    print("Animal:", m)
NameError: name 'm' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 18:50:01) 
-- CODE:
cedula=float(input("digite o numero:"))
if(cedula!=2):
	print("invalido")
elif(cedula==2):
	m="Tartaruga"
elif(cedula==5):
	m="Garça"
elif(cedula==10):
	m="Arara"
elif(cedula==20):
	m="Mico-leao-dourado"
elif(cedula==50):
	m="onca"
elif(cedula==100):
	m="Garoupa"
print("Entrada:", cedula)
print("Animal:", m)


-- EXECUTION TIME:
0.209601
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1692/1100/main.py", line 17, in <module>
    print("Animal:", m)
NameError: name 'm' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 18:50:56) 
-- CODE:
cedula=float(input("digite o numero:"))
if(cedula!=2):
	print("invalido")
elif(cedula==2):
	animal="Tartaruga"
elif(cedula==5):
	animal="Garça"
elif(cedula==10):
	animal="Arara"
elif(cedula==20):
	animal="Mico-leao-dourado"
elif(cedula==50):
	animal="onca"
elif(cedula==100):
	animal="Garoupa"
print("Entrada:", cedula)
print("Animal:", animal)


-- EXECUTION TIME:
0.126794
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1692/1100/main.py", line 17, in <module>
    print("Animal:", animal)
NameError: name 'animal' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 18:50:58) 
-- CODE:
cedula=float(input("digite o numero:"))
if(cedula!=2):
	print("invalido")
elif(cedula==2):
	animal="Tartaruga"
elif(cedula==5):
	animal="Garça"
elif(cedula==10):
	animal="Arara"
elif(cedula==20):
	animal="Mico-leao-dourado"
elif(cedula==50):
	animal="onca"
elif(cedula==100):
	animal="Garoupa"
print("Entrada:", cedula)
print("Animal:", animal)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 17, in <module>
    print("Animal:", animal)
NameError: name 'animal' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 18:52:39) 
-- CODE:
cedula=float(input("digite o numero:"))
if(cedula!=2):
	print("invalido")
elif(cedula==2):
	animal="Tartaruga"
elif(cedula==5):
	animal="Garça"
elif(cedula==10):
	animal="Arara"
elif(cedula==20):
	animal="Mico-leao-dourado"
elif(cedula==50):
	animal="onca"
elif(cedula==100):
	animal="Garoupa"
print("Entrada:", cedula, ",", animal)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 16, in <module>
    print("Entrada:", cedula, ",", animal)
NameError: name 'animal' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 18:53:50) 
-- CODE:
cedula=float(input("digite o numero:"))
if(cedula!=2):
	print("invalido")
elif(cedula==2):
	animal="Tartaruga"
elif(cedula==5):
	animal="Garça"
elif(cedula==10):
	animal="Arara"
elif(cedula==20):
	animal="Mico-leao-dourado"
elif(cedula==50):
	animal="onca"
elif(cedula==100):
	animal="Garoupa"
	print("Entrada:", cedula, 
	print("Animal:", animal)



-- ERROR:
File "XXXX", line 20
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 18:54:10) 
-- CODE:
cedula=float(input("digite o numero:"))
if(cedula!=2):
	print("invalido")
elif(cedula==2):
	animal="Tartaruga"
elif(cedula==5):
	animal="Garça"
elif(cedula==10):
	animal="Arara"
elif(cedula==20):
	animal="Mico-leao-dourado"
elif(cedula==50):
	animal="onca"
elif(cedula==100):
	animal="Garoupa"
	print("Entrada:", cedula, 
	print("Animal:", animal)

-- ERROR:
File "XXXX", line 18
    
                             ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 18:54:21) 
-- CODE:
cedula=float(input("digite o numero:"))
if(cedula!=2):
	print("invalido")
elif(cedula==2):
	animal="Tartaruga"
elif(cedula==5):
	animal="Garça"
elif(cedula==10):
	animal="Arara"
elif(cedula==20):
	animal="Mico-leao-dourado"
elif(cedula==50):
	animal="onca"
elif(cedula==100):
	animal="Garoupa"
	print("Entrada:", cedula, 
	print("Animal:", animal)
-- ERROR:
File "XXXX", line 18
    
                             ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 18:54:55) 
-- CODE:
cedula=float(input("digite o numero:"))
if(cedula!=2):
	print("invalido")
elif(cedula==2):
	animal="Tartaruga"
elif(cedula==5):
	animal="Garça"
elif(cedula==10):
	animal="Arara"
elif(cedula==20):
	animal="Mico-leao-dourado"
elif(cedula==50):
	animal="onca"
elif(cedula==100):
	animal="Garoupa"
print("Entrada:", cedula, 
	print("Animal:", animal)
-- ERROR:
File "XXXX", line 18
    
                             ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 18:55:02) 
-- CODE:
cedula=float(input("digite o numero:"))
if(cedula!=2):
	print("invalido")
elif(cedula==2):
	animal="Tartaruga"
elif(cedula==5):
	animal="Garça"
elif(cedula==10):
	animal="Arara"
elif(cedula==20):
	animal="Mico-leao-dourado"
elif(cedula==50):
	animal="onca"
elif(cedula==100):
	animal="Garoupa"
print("Entrada:", cedula, 
print("Animal:", animal)
-- ERROR:
File "XXXX", line 18
    
                            ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 18:56:10) 
-- CODE:
cedula=float(input("digite o numero:"))
if(cedula!=2):
	print("invalido")
elif(cedula==2):
	animal="Tartaruga"
elif(cedula==5):
	animal="Garça"
elif(cedula==10):
	animal="Arara"
elif(cedula==20):
	animal="Mico-leao-dourado"
elif(cedula==50):
	animal="onca"
elif(cedula==100):
	animal="Garoupa"
print("Entrada:", cedula, 
print("Animal:", animal)
-- ERROR:
File "XXXX", line 18
    
                            ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 18:56:31) 
-- CODE:
cedula=float(input("digite o numero:"))
if(cedula!=2):
	print("invalido")
elif(cedula==2):
	animal="Tartaruga"
elif(cedula==5):
	animal="Garça"
elif(cedula==10):
	animal="Arara"
elif(cedula==20):
	animal="Mico-leao-dourado"
elif(cedula==50):
	animal="onca"
elif(cedula==100):
	animal="Garoupa"
print("Entrada:", cedula) 
print("Animal:", animal)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 17, in <module>
    print("Animal:", animal)
NameError: name 'animal' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 18:58:18) 
-- CODE:
cedula=float(input("digite o numero:"))

if(cedula!=2):
	print("invalido")
elif(cedula==2):
	animal="Tartaruga"
elif(cedula==5):
	animal="Garça"
elif(cedula==10):
	animal="Arara"
elif(cedula==20):
	animal="Mico-leao-dourado"
elif(cedula==50):
	animal="onca"
elif(cedula==100):
	animal="Garoupa"
print("Entrada:", cedula) 
print("Animal:", animal)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 18, in <module>
    print("Animal:", animal)
NameError: name 'animal' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 18:58:41) 
-- CODE:
cedula=int(input("digite o numero:"))

if(cedula!=2):
	print("invalido")
elif(cedula==2):
	animal="Tartaruga"
elif(cedula==5):
	animal="Garça"
elif(cedula==10):
	animal="Arara"
elif(cedula==20):
	animal="Mico-leao-dourado"
elif(cedula==50):
	animal="onca"
elif(cedula==100):
	animal="Garoupa"
print("Entrada:", cedula) 
print("Animal:", animal)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 18, in <module>
    print("Animal:", animal)
NameError: name 'animal' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 18:59:18) 
-- CODE:
cedula=int(input("digite o numero:"))
animal=""
if(cedula!=2):
	print("invalido")
elif(cedula==2):
	animal="Tartaruga"
elif(cedula==5):
	animal="Garça"
elif(cedula==10):
	animal="Arara"
elif(cedula==20):
	animal="Mico-leao-dourado"
elif(cedula==50):
	animal="onca"
elif(cedula==100):
	animal="Garoupa"
print("Entrada:", cedula) 
print("Animal:", animal)
-- OUTPUT:
invalido
Entrada: 100
Animal:
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 18:59:58) 
-- CODE:
cedula=int(input("digite o numero:"))
animal=
if(cedula!=2):
	print("invalido")
elif(cedula==2):
	animal="Tartaruga"
elif(cedula==5):
	animal="Garça"
elif(cedula==10):
	animal="Arara"
elif(cedula==20):
	animal="Mico-leao-dourado"
elif(cedula==50):
	animal="onca"
elif(cedula==100):
	animal="Garoupa"
print("Entrada:", cedula) 
print("Animal:", animal)
-- ERROR:
File "XXXX", line 2
    animal=
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 19:00:07) 
-- CODE:
cedula=int(input("digite o numero:"))
animal= burro
if(cedula!=2):
	print("invalido")
elif(cedula==2):
	animal="Tartaruga"
elif(cedula==5):
	animal="Garça"
elif(cedula==10):
	animal="Arara"
elif(cedula==20):
	animal="Mico-leao-dourado"
elif(cedula==50):
	animal="onca"
elif(cedula==100):
	animal="Garoupa"
print("Entrada:", cedula) 
print("Animal:", animal)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    animal= burro
NameError: name 'burro' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 19:00:35) 
-- CODE:
cedula=int(input("digite o numero:"))
animal= "burro"
if(cedula!=2):
	print("invalido")
elif(cedula==2):
	animal="Tartaruga"
elif(cedula==5):
	animal="Garça"
elif(cedula==10):
	animal="Arara"
elif(cedula==20):
	animal="Mico-leao-dourado"
elif(cedula==50):
	animal="onca"
elif(cedula==100):
	animal="Garoupa"
print("Entrada:", cedula) 
print("Animal:", animal)
-- OUTPUT:
invalido
Entrada: 100
Animal: burro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 19:00:58) 
-- CODE:
cedula=int(input("digite o numero:"))
animal= "burro"
if(cedula!=2):
	print("invalido")
elif(cedula==2):
	animal="Tartaruga"
elif(cedula==5):
	animal="Garça"
elif(cedula==10):
	animal="Arara"
elif(cedula==20):
	animal="Mico-leao-dourado"
elif(cedula==50):
	animal="onca"
elif(cedula==100):
	animal="Garoupa"
print("Entrada:", cedula) 

-- OUTPUT:
invalido
Entrada: 100
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 19:01:10) 
-- CODE:
cedula=int(input("digite o numero:"))
animal= "burro"
if(cedula!=2):
	print("invalido")
elif(cedula==2):
	animal="Tartaruga"
elif(cedula==5):
	animal="Garça"
elif(cedula==10):
	animal="Arara"
elif(cedula==20):
	animal="Mico-leao-dourado"
elif(cedula==50):
	animal="onca"
elif(cedula==100):
	animal="Garoupa"
print("Entrada:", cedula) 

-- OUTPUT:
invalido
Entrada: 100
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 19:04:19) 
-- CODE:
cedula=int(input("digite o numero:"))
animal= "burro"
if(cedula==2):
	animal="Tartaruga"
elif(cedula==5):
	animal="Garça"
elif(cedula==10):
	animal="Arara"
elif(cedula==20):
	animal="Mico-leao-dourado"
elif(cedula==50):
	animal="onca"
elif(cedula==100):
	animal="Garoupa"
else:
	animal="Invalido"
print("Entrada:", cedula)
print("Animal:", animal)


-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 19:04:39) 
-- CODE:
cedula=int(input("digite o numero:"))
animal= "burro"
if(cedula==2):
	animal="Tartaruga"
elif(cedula==5):
	animal="Garça"
elif(cedula==10):
	animal="Arara"
elif(cedula==20):
	animal="Mico-leao-dourado"
elif(cedula==50):
	animal="onca"
elif(cedula==100):
	animal="Garoupa"
else:
	animal="Invalido"
print("Entrada:", cedula)
print("Animal:", animal)


-- EXECUTION TIME:
0.185774
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: onca
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 19:04:48) 
-- CODE:
cedula=int(input("digite o numero:"))
animal= "burro"
if(cedula==2):
	animal="Tartaruga"
elif(cedula==5):
	animal="Garça"
elif(cedula==10):
	animal="Arara"
elif(cedula==20):
	animal="Mico-leao-dourado"
elif(cedula==50):
	animal="onca"
elif(cedula==100):
	animal="Garoupa"
else:
	animal="Invalido"
print("Entrada:", cedula)
print("Animal:", animal)


-- EXECUTION TIME:
0.24557
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: onca
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 19:05:18) 
-- CODE:
cedula=int(input("digite o numero:"))
animal= "burro"
if(cedula==2):
	animal="Tartaruga"
elif(cedula==5):
	animal="Garca"
elif(cedula==10):
	animal="Arara"
elif(cedula==20):
	animal="Mico-leao-dourado"
elif(cedula==50):
	animal="Onca-pintada"
elif(cedula==100):
	animal="Garoupa"
else:
	animal="Invalido"
print("Entrada:", cedula)
print("Animal:", animal)


-- EXECUTION TIME:
0.118506
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
